[gd_scene load_steps=29 format=1]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Art/Light.png" type="Texture" id=2]
[ext_resource path="res://Art/SolidWhite.png" type="Texture" id=3]
[ext_resource path="res://TileSet.xml" type="TileSet" id=4]
[ext_resource path="res://Scripts/GUI_Main.gd" type="Script" id=5]
[ext_resource path="res://Art/WallWood.png" type="Texture" id=6]
[ext_resource path="res://Art/WallWoodBack.png" type="Texture" id=7]
[ext_resource path="res://Art/WallStone.png" type="Texture" id=8]
[ext_resource path="res://Art/WallStoneBack.png" type="Texture" id=9]
[ext_resource path="res://Art/WallBrick.png" type="Texture" id=10]
[ext_resource path="res://Art/WallBrickBack.png" type="Texture" id=11]
[ext_resource path="res://Art/WallCork.png" type="Texture" id=12]
[ext_resource path="res://Art/WallCorkBack.png" type="Texture" id=13]
[ext_resource path="res://Art/FloorSupports.png" type="Texture" id=14]
[ext_resource path="res://Art/FloorNormal.png" type="Texture" id=15]
[ext_resource path="res://Art/RoofFlat.png" type="Texture" id=16]
[ext_resource path="res://Art/RoofAngled.png" type="Texture" id=17]
[ext_resource path="res://Art/Stairs.png" type="Texture" id=18]
[ext_resource path="res://Art/WindowOpen.png" type="Texture" id=19]
[ext_resource path="res://Art/WindowGlass.png" type="Texture" id=20]
[ext_resource path="res://Art/Door.png" type="Texture" id=21]
[ext_resource path="res://Art/Bed.png" type="Texture" id=22]
[ext_resource path="res://Art/LightBulbBad.png" type="Texture" id=23]
[ext_resource path="res://Art/LightBulbGood.png" type="Texture" id=24]
[ext_resource path="res://Art/LightBulbLED.png" type="Texture" id=25]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=26]
[ext_resource path="res://Art/Player.png" type="Texture" id=27]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 60, -90, 60, 150, -40, 150, -40, -90 )

[node name="Main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

visibility/opacity = 0.25
color = Color( 0.113281, 0.0137177, 0.0137177, 1 )

[node name="SunLight" type="Light2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 0, 730 )
enabled = true
texture = ExtResource( 2 )
offset = Vector2( 0, 0 )
scale = 5.0
color = Color( 1, 0.937744, 0.601563, 1 )
energy = 20.0
mode = 0
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = true
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 1600
shadow/esm_multiplier = 80.0
shadow/item_mask = 1

[node name="Sprite" type="Sprite" parent="SunLight"]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
modulate = Color( 0.964844, 0.907191, 0.293976, 1 )

[node name="Background" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="SolidWhite" type="Sprite" parent="Background"]

transform/pos = Vector2( 800, 450 )
transform/scale = Vector2( 72.7273, 40.9091 )
texture = ExtResource( 3 )
modulate = Color( 0.0625, 0.00585938, 0.00585938, 1 )

[node name="MainCamera" type="Camera2D" parent="."]

transform/pos = Vector2( 2, 2 )
anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = 0
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0

[node name="TileMapBack" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 150, 150 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="TileMapMiddleBack" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 150, 150 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="TileMapMiddleFront" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 150, 150 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="TileMapFront" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 150, 150 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="PreviewTileMap" type="TileMap" parent="."]

visibility/opacity = 0.66
mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 150, 150 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Control" type="Control" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 5 )

[node name="TabContainer" type="TabContainer" parent="CanvasLayer/Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 710.0
margin/right = 1600.0
margin/bottom = 900.0
tab_align = 1
tabs_visible = true

[node name="Walls" type="Tabs" parent="CanvasLayer/Control/TabContainer"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0

[node name="WallWood" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Walls"]

rect/scale = Vector2( 0.5, 0.5 )
hint/tooltip = "A wooden wall, good for a little safety and comfort"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = 28.0
margin/right = 177.0
margin/bottom = 180.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )

[node name="WallWoodBack" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Walls"]

rect/scale = Vector2( 0.5, 0.5 )
hint/tooltip = "A wooden wall, good for a little safety and comfort"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 131.0
margin/top = 28.0
margin/right = 282.0
margin/bottom = 181.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )

[node name="WallStone" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Walls"]

rect/scale = Vector2( 0.5, 0.5 )
hint/tooltip = "A wooden wall, good for a little safety and comfort"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 226.0
margin/top = 26.0
margin/right = 377.0
margin/bottom = 179.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )

[node name="WallStoneBack" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Walls"]

rect/scale = Vector2( 0.5, 0.5 )
hint/tooltip = "A wooden wall, good for a little safety and comfort"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 330.0
margin/top = 28.0
margin/right = 481.0
margin/bottom = 181.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )

[node name="WallBrick" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Walls"]

rect/scale = Vector2( 0.5, 0.5 )
hint/tooltip = "A wooden wall, good for a little safety and comfort"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 434.0
margin/top = 28.0
margin/right = 585.0
margin/bottom = 181.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )

[node name="WallBrickBack" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Walls"]

rect/scale = Vector2( 0.5, 0.5 )
hint/tooltip = "A wooden wall, good for a little safety and comfort"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 534.0
margin/top = 28.0
margin/right = 685.0
margin/bottom = 181.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )

[node name="WallCork" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Walls"]

rect/scale = Vector2( 0.5, 0.5 )
hint/tooltip = "A wooden wall, good for a little safety and comfort"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 633.0
margin/top = 28.0
margin/right = 784.0
margin/bottom = 181.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )

[node name="WallCorkBack" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Walls"]

rect/scale = Vector2( 0.5, 0.5 )
hint/tooltip = "A wooden wall, good for a little safety and comfort"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 726.0
margin/top = 28.0
margin/right = 877.0
margin/bottom = 181.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 13 )

[node name="Floors" type="Tabs" parent="CanvasLayer/Control/TabContainer"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0

[node name="FloorSupports" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Floors"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = 28.0
margin/right = 177.0
margin/bottom = 180.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 14 )

[node name="FloorNormal" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Floors"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 126.0
margin/top = 28.0
margin/right = 277.0
margin/bottom = 181.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 15 )

[node name="RoofFlat" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Floors"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 226.0
margin/top = 28.0
margin/right = 377.0
margin/bottom = 181.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 16 )

[node name="RoofAngled" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Floors"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 326.0
margin/top = 28.0
margin/right = 477.0
margin/bottom = 181.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 17 )

[node name="Stairs" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Floors"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 426.0
margin/top = 28.0
margin/right = 577.0
margin/bottom = 181.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 18 )

[node name="Windows" type="Tabs" parent="CanvasLayer/Control/TabContainer"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0

[node name="WindowOpen" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Windows"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = 28.0
margin/right = 177.0
margin/bottom = 180.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 19 )

[node name="WindowGlass" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Windows"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 126.0
margin/top = 28.0
margin/right = 277.0
margin/bottom = 181.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 20 )

[node name="Misc" type="Tabs" parent="CanvasLayer/Control/TabContainer"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0

[node name="Door" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Misc"]

rect/scale = Vector2( 0.25, 0.25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = 28.0
margin/right = 327.0
margin/bottom = 329.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 21 )

[node name="Bed" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Misc"]

rect/scale = Vector2( 0.25, 0.25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 144.0
margin/top = 28.0
margin/right = 445.0
margin/bottom = 329.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 22 )

[node name="Lights" type="Tabs" parent="CanvasLayer/Control/TabContainer"]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0

[node name="LightBulbBad" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Lights"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = 28.0
margin/right = 177.0
margin/bottom = 179.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 23 )

[node name="LightBulbGood" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Lights"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 126.0
margin/top = 28.0
margin/right = 277.0
margin/bottom = 179.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 24 )

[node name="LightBulbLED" type="TextureButton" parent="CanvasLayer/Control/TabContainer/Lights"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 216.0
margin/top = 28.0
margin/right = 367.0
margin/bottom = 179.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 25 )

[node name="Player" type="KinematicBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 152, 192 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 26 )

[node name="Sprite" type="Sprite" parent="Player"]

transform/pos = Vector2( 157, 192 )
texture = ExtResource( 27 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player"]

transform/pos = Vector2( 152, 192 )
build_mode = 0
polygon = Vector2Array( -40, -90, -40, 150, 60, 150, 60, -90 )
shape_range = Vector2( 0, 0 )
trigger = false

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Walls/WallWood" to="CanvasLayer/Control" method="_on_WallWood_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Walls/WallWoodBack" to="CanvasLayer/Control" method="_on_WallWoodBack_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Walls/WallStone" to="CanvasLayer/Control" method="_on_WallStone_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Walls/WallStoneBack" to="CanvasLayer/Control" method="_on_WallStoneBack_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Walls/WallBrick" to="CanvasLayer/Control" method="_on_WallBrick_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Walls/WallBrickBack" to="CanvasLayer/Control" method="_on_WallBrickBack_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Walls/WallCork" to="CanvasLayer/Control" method="_on_WallCork_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Walls/WallCorkBack" to="CanvasLayer/Control" method="_on_WallCorkBack_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Floors/FloorSupports" to="CanvasLayer/Control" method="_on_FloorSupports_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Floors/FloorNormal" to="CanvasLayer/Control" method="_on_FloorNormal_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Floors/RoofFlat" to="CanvasLayer/Control" method="_on_RoofFlat_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Floors/RoofAngled" to="CanvasLayer/Control" method="_on_RoofAngled_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Floors/Stairs" to="CanvasLayer/Control" method="_on_Stairs_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Windows/WindowOpen" to="CanvasLayer/Control" method="_on_WindowOpen_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Windows/WindowGlass" to="CanvasLayer/Control" method="_on_WindowGlass_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Misc/Door" to="CanvasLayer/Control" method="_on_Door_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Misc/Bed" to="CanvasLayer/Control" method="_on_Bed_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Lights/LightBulbBad" to="CanvasLayer/Control" method="_on_LightBulbBad_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Lights/LightBulbGood" to="CanvasLayer/Control" method="_on_LightBulbGood_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Lights/LightBulbLED" to="CanvasLayer/Control" method="_on_LightBulbLED_pressed"]


